# controllers/Extraction/extraExtraction.py
@@ -125,3 +125,72 @@ FROM
         return df,Starting_PointId,Starting_PointName,Starting_Point_latitude,Starting_Point_longitude,total_requirement,excess_capacity,Unselected_df[["officeName","latitude","longitude","atDeliveryRequirement","officeId","totalCapacity","currentStock","availableQuantity","masterOfficeId","masterOfficeName"]].to_dict(orient="records"),minimum_multiple,PlanDate,ExpectedDeliveryDate,int(DeliveryPlanStatusId),CreatedBy,UpdatedBy,CreatedOn,UpdatedOn
     else:
         return df,0,0,0,0,0,0,[],None,None,None,None,None,None,None,None
+    
+def ExtractingDriverRouteFromDeliveryPlan(DeliveryPlanId,cnxn):
+    Delivery_df=pd.read_sql_query(f'''
+                         SELECT
+        df.officeId,
+            df.officeName,
+        df.longitude,
+            df.latitude,
+            
+            d.containerSize,
+            d.startPointID,
+            d.startLatitude,
+            d.startLongitude,
+            d.deliveryPlanId,
+            m.masterOfficeId,
+            m.OfficeName As masterOfficeName,
+            d.hubName,
+            d.plannedQuantity,d.currentQuantity,d.availableQuantity,d.productId,d.deliveryLimit,
+                                d.planDate,d.expectedDeliveryDate,d.deliveryPlanStatusId,d.createdBy,d.updatedBy,d.createdOn,d.updatedOn,
+                                d.deliveryPlanDetailsId,d.sequenceNo,d.adminId,d.receivedQuantity,d.deliveryPlanDetailsStatusId,d.approvedQuantity,d.deliveredQuantity,d.deliveredAt
+        FROM
+            Office df
+            LEFT JOIN
+            Office m ON m.OfficeId = df.masterOfficeId
+
+            Inner JOIN(
+            Select dpd.DeliveryPlanId,dpd.OfficeId,dpd.PlannedQuantity,dpd.CurrentQuantity,dpd.AvailableQuantity,dpd.DeliveryPlanDetailsStatusId,
+            dp.StartPointId,dp.ContainerSize,M.Latitude As StartLatitude,
+            M.Longitude As StartLongitude,M.HubName,dp.ProductId,dp.DeliveryLimit,
+                                dp.PlanDate,dp.ExpectedDeliveryDate,dp.DeliveryPlanStatusId,dp.CreatedBy,dp.UpdatedBy,dp.CreatedOn,dp.UpdatedOn,
+                                dpd.DeliveryPlanDetailsId,dpd.AdminId,dpd.SequenceNo,dpd.ReceivedQuantity,dpd.ApprovedQuantity,dpd.DeliveredQuantity,dpd.DeliveredAt
+
+            from DeliveryPlanDetails dpd
+
+            left join
+            DeliveryPlan dp
+
+            on dpd.DeliveryPlanId=dp.DeliveryPlanId
+
+            left join
+            Hub M
+
+            on dp.StartPointId=M.HubId
+            
+            Where 
+            dp.DeliveryPlanId={DeliveryPlanId} And
+            (dpd.DeliveryPlanDetailsStatusId!=3)
+                )As d
+            On d.OfficeId=df.OfficeId  
+        ;
+                         ''',cnxn)
+    
+    driver_df=pd.read_sql_query(f'''SELECT
+        name as status,
+        DeliveryTracker.latitude,
+        DeliveryTracker.longitude,
+        driverId,
+        locationUpdateTime,
+        DeliveryTracker.deliveryTrackerStatusId,
+        DeliveryPlanDetails.officeId,
+        Office.officeName
+    FROM
+        DeliveryTracker
+    Left Join DeliveryTrackerStatusMaster ON DeliveryTrackerStatusMaster.DeliveryTrackerStatusId = DeliveryTracker.DeliveryTrackerStatusId
+    Left Join DeliveryPlanDetails ON DeliveryPlanDetails.DeliveryPlanDetailsId = DeliveryTracker.DeliveryPlanDetailsId AND DeliveryPlanDetails.DeliveryPlanId = DeliveryTracker.DeliveryPlanId
+    Left Join Office ON Office.OfficeId = DeliveryPlanDetails.officeId
+    WHERE
+        DeliveryTracker.DeliveryPlanId = {DeliveryPlanId}''',cnxn)
+    return Delivery_df.to_dict(orient="records"),driver_df.to_dict(orient="records")
